--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -66,7 +66,7 @@
         top: -8px;
         @media (max-width: 48em) {
           top: 24%;
-          left: 42%;
+          left: 160px;
         }
       }
     }
