--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,7 +12,8 @@ h1,h2,h3,h4,h5,p, a {
   margin: 0;
 }
 .contentContainer {
-  max-width: 68%;
+  width: 90%;
+  max-width: 1300px;
   margin: 0 auto;
 }
 
