--- a/src/styles/components/businesses/_resultInfo.scss
+++ b/src/styles/components/businesses/_resultInfo.scss
@@ -26,16 +26,21 @@
 }
 
 .no-result-message {
+  position: absolute;
+  top: 50%;
+  width: 92%;
+  min-height: 35vh;
   &-show {
     text-align: center;
     margin-bottom: 116px;
     margin-top: 91px;
+    min-height: 50vh;
     .message {
       font-size: 24px;
       line-height: 36px;
       opacity: 0.5;
     }
-    @media (max-width: 48em) {
+    @media (max-width: 50em) {
       margin-top: 0px;
       padding: 24px;
       svg {
@@ -53,7 +58,7 @@
   }
 }
 
-@media (max-width: 48em) {
+@media (max-width: 50em) {
   .businessList_top {
     text-align: center;
   }
