--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -1,6 +1,6 @@
 @mixin container($bg-color, $ft-color, $invert){
   @if $invert == true {
-    margin: 25px 0 24px 0;
+    margin: 33px 0 24px 0;
     position: relative;
     background-color: $bg-color;
     color: $ft-color;
@@ -8,7 +8,7 @@
     padding: 24px;
     line-height: 24px;
   } @else {
-    margin: 25px 0 28px 0;
+    margin: 33px 0 28px 0;
     position: relative;
     background-color: $bg-color;
     color: $ft-color;
@@ -34,7 +34,10 @@
   p {
     font-weight: lighter;
   }
-  @media (max-width: 48em) {
+  @media (max-width: 1221px) {
+    margin: 8px 0 24px 0;
+  }
+  @media (max-width: 50em) {
     margin: 6px 0 8px 0;
     padding: 0;
   }
@@ -139,7 +142,7 @@ $width: (
   height: 485px;
 }
 
-@media (max-width: 48em) {
+@media (max-width: 50em) {
   .container--full {
     padding-left: 0px !important;
     padding-right: 0px !important;
