CS-230 fix css syntax and fix click in logo to go back to the homepage

--- a/src/styles/base/_margin.scss
+++ b/src/styles/base/_margin.scss
@@ -1,5 +1,5 @@
 .margin-0 {
-  margin: 0px !important;
+  margin: 0 !important;
 }
 .m-bot-8 {
   margin-bottom: 8px;
@@ -47,10 +47,10 @@
   margin-left: 16px;
 }
 .m-x-7 {
-  margin: 0 7px 0 7px;
+  margin: 0 7px;
 }
 .m-x-8 {
-  margin: 0 8px 0 8px;
+  margin: 0 8px;
 }
 .m-bot-100 {
   margin-bottom: 100px;
@@ -59,8 +59,8 @@
   margin: auto;
 }
 .margin-x-16{
-  margin: 0 16px 0 16px;
+  margin: 0 16px;
 }
 .margin-y-20{
-  margin: 20px 0 20px 0;
+  margin: 20px 0;
 }
