--- a/src/styles/base/_padding.scss
+++ b/src/styles/base/_padding.scss
@@ -14,15 +14,15 @@
   padding-bottom: 10px;
 }
 .p-left-0 {
-  padding-left: 0px !important;
+  padding-left: 0 !important;
 }
 .p-right-0 {
-  padding-right: 0px !important;
+  padding-right: 0 !important;
 }
 .p-0 {
   padding: 0px !important;
 }
 
 .p-x-24 {
-  padding: 0 24px 0 24px;
+  padding: 0 24px;
 }
