--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,5 +1,5 @@
 .btn {
-  padding: 20px 24px 20px 24px;
+  padding: 20px 24px;
   outline: none;
   &:focus {
     outline: none;
@@ -28,6 +28,8 @@
       display: inline-block;
       width: 100%;
       text-align: left;
+      vertical-align: middle;
+      line-height: normal;
     }
   }
 
