--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -44,7 +44,7 @@
         top: -9px;
       }
       @media (max-width: 50em) {
-        padding: 10px 0 10px 0;
+        padding: 10px 0;
       }
     }
     .text-search {
@@ -130,7 +130,7 @@
     border: none;
     background: none;
     color: $primary-color;
-    padding: 8px 12px 8px 12px;
+    padding: 8px 12px;
     font-size: 16px !important;
     text-align: left;
     width: 100%;
@@ -234,7 +234,7 @@
   }
   @media (max-width: 50em){
     width: 100%;
-    padding: 0 16px 0 16px;
+    padding: 0 16px;
   }
 }
 .option-dropdown-list {
@@ -242,7 +242,7 @@
   width: 416px;
   padding: 8px;
   color:#fff;
-  margin: 0px;
+  margin: 0;
   li {
     padding: 8px;
     text-align: left;
@@ -268,7 +268,7 @@
     width: 100%;
     height: 4000px;
     li {
-      padding: 8px 16px 8px 16px;
+      padding: 8px 16px;
     }
   }
 }
