CS-230 fix no result message for mobile

--- a/src/styles/components/businesses/_resultInfo.scss
+++ b/src/styles/components/businesses/_resultInfo.scss
@@ -53,9 +53,8 @@
     display: none;
   }
   @media (max-width: 50em) {
-    position: absolute;
-    top: 70%;
-    width: 88%;
+    margin-top: 50%;
+    width: 100%;
     min-height: 35vh;
   }
 }
