CS-230 refactor of the search by text input, breakpoint font for small screens, fix clear all btn, fix business card grid

--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -69,6 +69,7 @@ html {
     font-family: sans-serif; /* 1 */
     -ms-text-size-adjust: 100%; /* 2 */
     -webkit-text-size-adjust: 100%; /* 2 */
+    min-height: 100%;
 }
 
 /**
@@ -79,6 +80,7 @@ body {
     margin: 0;
     font-family: 'Proxima Nova';
     color: $primary-color;
+    min-height: 100%;
 }
 
 /* ==========================================================================
