--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -57,9 +57,9 @@
     }
   }
   @media (max-width: 1181px) {
-    padding: 20px 4px 20px 10px;
+    padding: 10px 0 10px 5px;
   }
-  @media (max-width: 50em) {
+  @media (max-width: 60em) {
     padding: 8px;
   }
 }
