--- a/src/styles/layout/_business.scss
+++ b/src/styles/layout/_business.scss
@@ -66,6 +66,7 @@
     margin-bottom: 25px;
     border: 1px solid rgba(96,125,139,0.25);
     opacity: 0.25;
+    width: 100%
   }
   h4 {
     margin-bottom: 4px;
@@ -96,7 +97,7 @@
 }
 
 .business-type-btn {
-  @media (max-width: 50em) {
+  @media (max-width: 60em) {
     overflow: hidden;
     white-space: nowrap;
     margin: 0 8px;
@@ -104,6 +105,9 @@
       overflow: scroll;
       white-space: nowrap;
       display: inline-block;
+      ::-webkit-scrollbar {
+        display: none;
+      }
       div {
         margin-right: 8px;
         display: inline-block;
