--- a/src/styles/layout/_container.scss
+++ b/src/styles/layout/_container.scss
@@ -37,7 +37,7 @@
   @media (max-width: 1221px) {
     margin: 8px 0 24px 0;
   }
-  @media (max-width: 50em) {
+  @media (max-width: 60em) {
     margin: 6px 0 8px 0;
     padding: 0;
   }
@@ -133,7 +133,8 @@ $width: (
 
 //map
 .map-container-expand{
-  width: 237px;
+  max-width: 237px;
+  width: 100%;
   height: 237px;
 }
 
@@ -142,7 +143,7 @@ $width: (
   height: 485px;
 }
 
-@media (max-width: 50em) {
+@media (max-width: 60em) {
   .container--full {
     padding-left: 0px !important;
     padding-right: 0px !important;
