CS-230 clean css and html

--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -185,7 +185,7 @@
       color: $white-color;
       opacity: 0.75;
       padding-left: 8px;
-      padding: 0 8px 0 8px;
+      padding: 0 8px;
       white-space: nowrap;
       display: inline-block;
     }
