CS-315 change search icon

--- a/src/styles/components/businesses/_resultInfo.scss
+++ b/src/styles/components/businesses/_resultInfo.scss
@@ -39,7 +39,7 @@
     @media (max-width: 60em) {
       margin-top: 0px;
       padding: 24px;
-      svg {
+      img {
         width: 100px;
         height: 100px;
       }
