--- a/src/styles/components/home/_hero.scss
+++ b/src/styles/components/home/_hero.scss
@@ -4,7 +4,7 @@
   background-position: 50% 25%;
   padding: 85px 0;
   color: white;
-  height: 90vh;
+  min-height: 80vh;
   .logo {
     width: 60px;
   }
@@ -51,6 +51,8 @@
     width: 85%;
     margin: 10px auto;
     padding-left: 16px;
+    text-overflow: ellipsis;
+    overflow: hidden;
   }
   .hero_input_btn {
     width: 90%;
