CS-315 fix mobiles bugs

--- a/src/styles/components/home/_hero.scss
+++ b/src/styles/components/home/_hero.scss
@@ -48,11 +48,11 @@
     line-height: 27px;
   }
   .hero_input {
-    width: 85%;
     margin: 10px auto;
     padding-left: 16px;
     text-overflow: ellipsis;
     overflow: hidden;
+    margin: 10px 0;
   }
   .hero_input_btn {
     width: 90%;
