--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -36,15 +36,21 @@
   background-color: $primary-color;
   border-radius: 0;
   height: 76px;
-  width: 94%;
+  width: 100%;
   border: none;
   padding: 0 28px;
   color: $secondary-color;
+  box-sizing: border-box;
   &:focus {
     outline: none;
   }
   &-dropdown {
     background-color: $primary-color;
+  }
+  &-container {
+    position: relative;
+    margin: auto;
+    position: relative;
   }
 }
 .hero-dropdown-list-hide {
@@ -57,12 +63,13 @@
   padding: 8px;
   z-index: 900;
   margin: 0;
+  box-sizing: border-box;
   li {
     padding: 8px;
     text-align: left;
     img {
-      float: right;
       width: 16px;
+      vertical-align: middle;
     }
     &:hover {
       background-color: #3E3E3E;
@@ -71,7 +78,8 @@
   a {
     color: $white-color;
     display: inline-block;
-    width: 90%;
+    width: 93%;
+    vertical-align: middle;
   }
   .not-match-message {
     font-weight: bold;
@@ -86,7 +94,7 @@
   @media (max-width: 60em) {
     width: 100%;
     li {
-      width: 89%;
+      width: 95%;
     }
   }
 }
@@ -109,7 +117,7 @@
     display: none;
   }
   @media (max-width: 60em) {
-    width: 86%;
-    left: 7%;
+    width: 100%;
+    left: 0;
   }
 }
