--- a/src/styles/layout/_mobile-footer.scss
+++ b/src/styles/layout/_mobile-footer.scss
@@ -23,7 +23,7 @@
       max-height: 10px;
       transition: all 0.5s ease-in;
       svg {
-        margin: 0 0 5px 5px;
+        margin: 0 5px;
       }
     }
     .social-icons-title {
