--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -2,16 +2,20 @@
   position: relative;
   max-width: 940px;
   margin: 48px auto;
-  input::placeholder {
-    color: $white-color;
-    opacity: 0.75;
-    font-weight: normal;
-    font-size: 20px;
-    padding: 0px;
-    font-weight: 400;
-    @media (max-width: 60em) {
-      font-size: 16px;
-      padding: -5px;
+  input {
+    &::placeholder,
+    &::-moz-placeholder,
+    &::-ms-input-placeholder {
+      color: $white-color;
+      opacity: 0.75;
+      font-weight: normal;
+      font-size: 20px;
+      padding: 0px;
+      font-weight: 400;
+      @media (max-width: 60em) {
+        font-size: 16px;
+        padding: -5px;
+      }
     }
   }
   .hide-placeholder {
