CS-329 the scroll of the business type buttons container was not working in mobile and fix width of the buttons business type for IE

--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -192,11 +192,10 @@
   border: none;
   border-radius: 0px;
   border-bottom: 1px solid $white-color;
-  color: $white-color;
+  color: #bdbdbd;
   font-size: 14px;
   font-weight: lighter;
   text-align: left;
-  opacity: 0.75;
   padding: 4px 0;
   width: 90%;
   &:active,
