--- a/src/styles/layout/_business.scss
+++ b/src/styles/layout/_business.scss
@@ -100,6 +100,9 @@
 }
 
 .business-type-btn {
+  .business-type {
+    width: 100%;
+  }
   @media (max-width: 60em) {
     overflow: hidden;
     white-space: nowrap;
