CS-330 business type buttons icon was going down and wasnt center with the text in IE

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -19,9 +19,9 @@
       border: 1px solid $primary-color;
     }
     &-text {
-      width: 89%;
+      width: 87%;
       display: inline-block;
-      float: left;
+      vertical-align: middle;
       line-height: 24px;
     }
     span {
@@ -31,6 +31,9 @@
       text-align: left;
       vertical-align: middle;
       line-height: normal;
+    }
+    svg {
+      vertical-align: middle;
     }
   }
 
