--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -5,8 +5,10 @@
   font-size: 12px;
   height: auto;
   min-height: 171px;
+  max-height: 300px;
   .logo {
     width: 50px;
+    height: 50px;
   }
   .logo-link {
     opacity: 1;
