--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -16,6 +16,9 @@ h1,h2,h3,h4,h5,p, a {
   max-width: 1300px;
   margin: 0 auto;
 }
+input[type=text]::-ms-clear {
+  display: none;
+}
 .body-container {
   min-height: 90vh;
 }
