CS-277 Remove main location from other location section & other style changes Create bold and thin font-face and implement throughout site according to design. Correct font sizes throughout site. Change margins of category chip so height of search bar matches the logo with one line of category chips. Add text-bold class to search result dropdowns to differentiate categories and orgs.

--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -78,7 +78,7 @@ html {
 
 body {
     margin: 0;
-    font-family: 'Proxima Nova';
+    font-family: 'proxima-nova-regular';
     color: $primary-color;
     min-height: 100%;
 }
@@ -227,7 +227,6 @@ sup {
 sub {
     bottom: -0.25em;
 }
-
 /* ==========================================================================
    Embedded content
    ========================================================================== */
