--- a/src/styles/components/home/_hero.scss
+++ b/src/styles/components/home/_hero.scss
@@ -5,6 +5,12 @@
   padding: 85px 0;
   color: white;
   min-height: 80vh;
+  h2 {
+    letter-spacing: 1px;
+  }
+  .hero_input {
+    font-size: 20px;
+  }
   .logo {
     width: 60px;
   }
