--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $silent-class:                      "%";
 $primary-color:                     #000000;
 $secondary-color:                   #2AD587;
 $third-color:                       #4A4A4A;
+$fourth-color:                      #00D3A7;
 $success-color:                     #0AC46F;
 $warning-color:                     #FFC000;
 $error-color:                       #FF0048;
@@ -17,9 +18,10 @@ $white-color:                       #fff;
 $seconday-color-opacity:            rgba(42, 213, 135, 0.17);
 
 //typography
-$font-family:                       'Proxima Nova', Georgia, sans-serif;
-$font-family-thin:                  'proxima_nova_ltthin', Georgia, sans-serif;
-$font-family-bold:                  'proxima_nova_altbold', Georgia, sans-serif;
+$font-family:                       'proxima-nova-regular', Georgia, sans-serif;
+$font-family-thin:                  'proxima-nova-thin', Georgia, sans-serif;
+$font-family-bold:                  'proxima-nova-bold', Georgia, sans-serif;
+$font-family-semi:                  'proxima-nova-semi', Georgia, sans-serif;
 $font-size-header:                  36px;
 $font-size-title:                   20px;
 $font-size-paragraphe:              16px;
