--- a/src/styles/components/businesses/map.css
+++ b/src/styles/components/businesses/map.css
@@ -111,8 +111,12 @@
   margin-left: 0;
   width: 100%;
 }
+.expand-btn {
+    color: #4A4A4A;
+}
 .map .btn-link {
   padding-right: 0;
+  margin-left: 0;
 
 }
 .float-right {
