--- a/src/styles/layout/_search-nav-mobile.scss
+++ b/src/styles/layout/_search-nav-mobile.scss
@@ -2,6 +2,10 @@
   text-align: right;
   padding: 10px 16px;
   margin-bottom: 23px;
+  .right-arrow {
+    width: 35px;
+    vertical-align: middle;
+  }
   .filter-icon {
     color: #2AD587;
     float: left;
