CS-377 Add loading text to loader view

--- a/src/styles/components/businesses/businessList.css
+++ b/src/styles/components/businesses/businessList.css
@@ -19,3 +19,11 @@
 .loader {
   width: 100px;
 }
+.loader-text {
+  position: absolute;
+  text-transform: uppercase;
+  color: #00D3A7;
+  font-size: 24px;
+  padding-top: 25%;
+  line-height: 36px;
+}
