--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -1,7 +1,7 @@
 .hero_inputContainer {
   position: relative;
   max-width: 940px;
-  margin: 48px auto;
+  margin: 48px auto 20px auto;
   input {
     &::placeholder,
     &::-moz-placeholder,
