--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -32,7 +32,7 @@
     display: inline-block !important;
     margin-right: 8px;
     opacity: 1 !important;
-    img {
+    svg {
       width: 20px;
       height: 20px;
       fill: #fff;
