--- a/src/styles/layout/_search-nav.scss
+++ b/src/styles/layout/_search-nav.scss
@@ -88,12 +88,16 @@
     font-weight: lighter;
     &-full {
       width: 100%;
+      max-height: 500px;
+      overflow-y: scroll;
     }
     &-half {
       width: 50%;
       display: inline-block;
       float: left;
       border-right: 1px solid rgba(0, 0, 0, 0.15);
+      max-height: 500px;
+      overflow-y: scroll;
     }
   }
   &-container {
@@ -106,10 +110,12 @@
     padding: 12px 0;
     color: $primary-color;
     width: 271px;
-    max-height: 500px;
-    overflow-y: scroll;
     &-expand {
       width: 544px;
+    }
+    ::-webkit-scrollbar {
+      width: 0px;
+      background: transparent; /* make scrollbar transparent */
     }
   }
   &-options{
@@ -141,6 +147,8 @@
     z-index: 10;
     color: $primary-color;
     width: 49%;
+    max-height: 500px;
+    overflow-y: scroll;
     display: inline-block;
   }
 }
