--- a/src/styles/components/businesses/map.css
+++ b/src/styles/components/businesses/map.css
@@ -71,28 +71,52 @@
 }
 
 .map_modal {
-  position: absolute;
   text-align: center;
   width: 200px;
-  bottom: -60px;
-  left: -20px;
+  bottom: 80px;
+  left: -87px;
   margin-left: -90px;
   box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(12,0,51,0.1);
   background: white;
+  position: relative;
+  color: #000;
+  background: linear-gradient(top, #f9d835, #f3961c);
+  z-index: 100;
 }
+
+.map_modal:after {
+  content: "";
+  display: block; /* reduce the damage in FF3.0 */
+  position: absolute;
+  bottom: -8px;
+  right: 15px;
+  width: 0;
+  border-width: 8px 8px 0;
+  border-style: solid;
+  border-color: white transparent;
+}
+
 .map_modal_top {
   padding: 15px 15px 0 15px;
+  min-height: 60px;
+  width: 100%;
+  bottom: 100%;
+  position: absolute;
+  background-color: inherit;
 }
 .map_modal_logo {
   height: 44px;
   display: block;
   margin-top: -5px;
+  position: absolute;
 }
 .map_modal_title {
   color: #000000;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 12px;
   margin: 0;
+  position: relative;
+  padding-left: 48px;
 }
 .map_modal_social {
   border-top: .5px solid rgba(0,0,0,0.12);
@@ -115,6 +139,16 @@
 }
 .map-expanded {
   width: 200%;
+}
+
+.close-map-org {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  z-index: 10;
+}
+.close-map-org:hover {
+  cursor: pointer;
 }
 
 @media (max-width: 960px) {
