--- a/src/styles/layout/_mobile-footer.scss
+++ b/src/styles/layout/_mobile-footer.scss
@@ -25,6 +25,7 @@
       overflow:hidden;
       max-height: 10px;
       transition: 0.5s ease all;
+      border-bottom: 1px solid rgba(73, 73, 73, 0.3);
       svg {
         margin: 0 5px;
       }
