CS-389 delete outline in the pagination buttons and the services description take the full width when contacts list is 0

--- a/src/styles/components/_pagination.scss
+++ b/src/styles/components/_pagination.scss
@@ -36,12 +36,14 @@
     a {
       color: #bbbbbb;
       font-weight: bold;
+      outline: 0;
     }
   }
   li.active {
     a {
       color: #000;
       font-weight: bold;
+      outline: 0;
     }
   }
   @media (max-width: 60em) {
